# plasma-applet-background-apps

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/package/: metadata.json
src/package/contents/ui/: FullRepresentation.qml  main.qml
src/plugin/: CMakeLists.txt  backgroundappsmodel.cpp  backgroundappsmodel.h
